--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -12,6 +12,6 @@
     </div>
   </div>
   <div>
-    <p>Copyright &copy; 2022 - 2023</p>
+    <p>Copyright &copy; 2022 - <span x-text="new Date().getFullYear()">{# #TODO #}</span></p>
   </div>
 </footer>
