--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-mono {
+    @apply duration-200 opacity-50 hover:opacity-100;
+  }
+  .bg-blur {
+    @apply bg-base-300 bg-opacity-75 backdrop-blur;
+  }
+  .toc {
+    @apply menu menu-vertical;
+  }
+  .header-anchor {
+    @apply no-underline btn-mono;
+  }
+  .prose {
+    @apply text-justify;
+  }
+  .prose img {
+    @apply mx-auto;
+  }
+}
