--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,40 +7,26 @@
   <link rel="icon" href="https://avatars.githubusercontent.com/u/43980777">
   {% set css %}
     {% include "src/styles/index.css" %}
+    {% include "src/styles/prism.css" %}
   {% endset %}
   <style>
-    {{css | postcss | safe}}
+    {{ css | postcss | safe }}
   </style>
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 </head>
 <body>
   <div class="drawer drawer-end">
     <input id="main-drawer" type="checkbox" class="drawer-toggle" />
-    <div
-      class="drawer-content"
-      x-data="{
-        scrolled: false,
-        handleScroll() {
-          this.scrolled = $el.scrollTop > 0
-        }
-      }"
-      x-init="handleScroll()"
-      @scroll="handleScroll"
-    >
-      <div
-        class="fixed w-full z-10 duration-200"
-        :class="scrolled ? 'bg-blur shadow' : ''"
-      >
-        {% include "navbar.njk" %}
-      </div>
-      {{ content | safe }}
+    <div class="drawer-content relative">
+      {% include "navbar.njk" %}
+      <div class="min-h-screen">{{ content | safe }}</div>
       {% include "footer.njk" %}
     </div>
     <div class="drawer-side">
       <label for="main-drawer" class="drawer-overlay"></label>
-      <div class="xl:hidden w-80 bg-blur">
-        {{ content | toc | safe }}{# #TODO Fix h3.. #}
-      </div>
+      <nav class="w-80 bg-base-300 bg-opacity-75 backdrop-blur">
+        {{ content | toc | safe }}
+      </nav>
     </div>
   </div>
 </body>
