modified:   .eleventy.js 	modified:   package-lock.json 	modified:   package.json 	modified:   src/404.njk 	new file:   src/_data/tagsdata.yaml 	modified:   src/_includes/footer.njk 	new file:   src/_includes/header.njk 	renamed:    src/_includes/layouts/base.njk -> src/_includes/layouts/default.njk 	new file:   src/_includes/layouts/home.njk 	modified:   src/_includes/layouts/post.njk 	modified:   src/_includes/navbar.njk 	new file:   src/_includes/post_date.njk 	new file:   src/_includes/post_tags.njk 	new file:   src/_includes/posts_list.njk 	new file:   src/_includes/tags_list.njk 	modified:   src/index.njk 	modified:   src/posts/0.md 	new file:   src/posts/posts.json 	modified:   src/styles/index.css 	modified:   src/styles/prism.css 	new file:   src/tags.njk 	modified:   tailwind.config.js

--- a/src/404.njk
+++ b/src/404.njk
@@ -1,10 +1,10 @@
 ---
-layout: layouts/base.njk
+layout: layouts/default.njk
 title: 404
 permalink: 404.html
 ---
 
-<div class="h-full flex flex-col items-center justify-center gap-16">
+<div class="h-screen flex flex-col items-center justify-center gap-16">
   <div class="flex flex-col items-center justify-center">
     <h1 class="text-9xl font-mono font-black">404</h1>
     <p>Content not found</p>
