--- a/src/_includes/navbar.njk
+++ b/src/_includes/navbar.njk
@@ -1,6 +1,10 @@
 <nav class="navbar w-full absolute z-10 justify-center text-neutral-content">
   <a
-    class="btn btn-ghost normal-case text-2xl"
+    class="
+      btn btn-ghost normal-case text-2xl
+      origin-top hover:translate-y-1 hover:scale-125 hover:rotate-3
+      hover:btn-primary hover:shadow-xl
+    "
     href="{{ '/' | url }}"
   >
     <div>
