--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,7 @@
 ---
-layout: layouts/base.njk
+layout: layouts/home.njk
 title: Home
+image: https://images.unsplash.com/photo-1570366583862-f91883984fde
 ---
 
-{# #TODO #}
+<div class="h-16">{# #TODO #}</div>
