--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -4,7 +4,7 @@ layout: layouts/default.njk
 
 {% include "header.njk" %}
 
-<div class="flex w-full min-h-screen backdrop-blur-xl">
+<div class="min-h-body flex backdrop-blur-xl">
   <div class="hidden xl:block w-80 bg-base-200 bg-opacity-90">
     <nav class="h-fit sticky top-0 max-h-screen overflow-y-auto">
       {{ content | toc | safe }}
