--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -35,9 +35,9 @@
     {% endif %}
     <div class="drawer-side">
       <label for="main-drawer" class="drawer-overlay"></label>
-      <nav class="w-80 bg-base-300 bg-opacity-75 backdrop-blur shadow">
+      <div class="w-80 bg-base-300 bg-opacity-75 backdrop-blur shadow">
         {{ content | toc | safe }}
-      </nav>
+      </div>
     </div>
   </div>
 </body>
