--- a/src/_includes/navbar.njk
+++ b/src/_includes/navbar.njk
@@ -1,7 +1,7 @@
-<nav class="navbar w-full absolute z-10 justify-center text-neutral-content">
+<nav class="navbar w-full absolute z-10 justify-center">
   <a
     class="
-      btn btn-ghost normal-case text-2xl
+      btn btn-ghost normal-case text-2xl font-bold
       origin-top hover:translate-y-1 hover:scale-125 hover:rotate-3
       hover:btn-primary hover:shadow-xl
     "
