--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/home.njk
 title: Home
-image: https://images.unsplash.com/photo-1570366583862-f91883984fde
+image: https://images.unsplash.com/photo-1570366583862-f91883984fde?w=320
 ---
 
 <div class="h-16">{# #TODO #}</div>
