--- a/src/_includes/home/tags.njk
+++ b/src/_includes/home/tags.njk
@@ -1,9 +1,9 @@
-{% for tag in collections.tags %}
+{% for tag in collections.tags | sort %}
   {% set tagUrl %}/tags/{{ tag | slugify }}/{% endset %}
   <a
     class="
       tag btn btn-accent normal-case font-mono
-      hover:rotate-6 hover:scale-110
+      hover:rotate-3 hover:scale-110
       drop-shadow hover:drop-shadow-xl
     "
     href="{{ tagUrl | url }}"
