--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,15 +13,6 @@
 }
 
 @layer components {
-  .min-h-body {
-    min-height: calc(100vh - 12rem);
-  }
-  .link-mono {
-    @apply font-mono font-bold duration-200 opacity-50 hover:opacity-100 no-underline;
-  }
-  .link-footer {
-    @apply link link-hover w-16;
-  }
   .social-icon {
     @apply
       duration-200 hover:scale-150 hover:-rotate-6 hover:-translate-y-1
@@ -30,8 +21,14 @@
   .social-icon svg {
     @apply w-8 h-8 fill-current;
   }
+  .link-mono {
+    @apply font-mono font-bold duration-200 opacity-50 hover:opacity-100 no-underline;
+  }
+  .link-footer {
+    @apply link link-hover w-16;
+  }
   .home .tag {
-    @apply lg:origin-bottom-left lg:hover:rotate-6;
+    @apply lg:origin-bottom-left lg:hover:-rotate-6;
   }
   .home article {
     @apply mt-8;
