--- a/src/tags.njk
+++ b/src/tags.njk
@@ -17,19 +17,17 @@ eleventyComputed:
 permalink: /tags/{{ tag | slugify }}/
 ---
 
-<header class="pt-16 hero">
-  <div class="hero-content text-center">
-    <div class="my-8">
-      <a
-        class="
-          text-4xl sm:text-6xl font-mono font-bold
-          duration-200 hover:text-secondary
-        "
-        href="{{ path | url }}"
-      ><h1>#{{ tag }}</h1></a>
-      {% if description %}
-        <p class="mt-4 sm:text-lg font-semibold">{{ description }}</p>
-      {% endif %}
-    </div>
+<div class="hero-content text-center">
+  <div class="my-8">
+    <a
+      class="
+        text-4xl sm:text-6xl font-mono font-bold
+        duration-200 hover:text-accent
+      "
+      href="{{ path | url }}"
+    ><h1>#{{ tag }}</h1></a>
+    {% if description %}
+      <p class="mt-4 sm:text-lg font-semibold">{{ description }}</p>
+    {% endif %}
   </div>
-</header>
+</div>
