--- a/src/tags.njk
+++ b/src/tags.njk
@@ -20,10 +20,7 @@ permalink: /tags/{{ tag | slugify }}/
 <div class="hero-content text-center">
   <div class="my-8">
     <a
-      class="
-        text-4xl sm:text-6xl font-mono font-bold
-        duration-200 hover:text-accent
-      "
+      class="text-4xl sm:text-6xl font-mono font-bold duration-200 hover:text-accent"
       href="{{ path | url }}"
     ><h1>#{{ tag }}</h1></a>
     {% if description %}
