--- a/src/404.njk
+++ b/src/404.njk
@@ -1,15 +1,15 @@
 ---
 layout: layouts/default.njk
 title: 404
+description: Content not found
 image: https://images.unsplash.com/photo-1558494949-ef010cbdcc31?w=1280
 permalink: 404.html
 ---
 
 <div
   class="
-    min-h-[calc(100vh-12rem)]
+    min-h-[calc(100vh-12rem)] bg-base-100 bg-opacity-75
     flex flex-col items-center justify-center gap-16
-    bg-base-100 bg-opacity-75
   "
 >
   <div class="flex flex-col items-center justify-center">
