--- a/src/feed/json.njk
+++ b/src/feed/json.njk
@@ -7,20 +7,20 @@ eleventyExcludeFromCollections: true
   "title": "{{ metadata.title }}",
   "language": "{{ metadata.language }}",
   "home_page_url": "{{ metadata.url }}",
-  "feed_url": "{{ permalink | absoluteUrl(metadata.url) }}",
-  "description": "{{ metadata.subtitle }}",
+  "feed_url": "{{ permalink | url(metadata.url) }}",
+  "description": "{{ metadata.description }}",
   "author": {
     "name": "{{ metadata.author.name }}",
     "url": "{{ metadata.author.url }}"
   },
   "items": [
     {%- for post in collections.posts | reverse %}
-    {%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
+    {%- set postUrl = post.url | url(metadata.url) %}
     {
-      "id": "{{ absolutePostUrl }}",
-      "url": "{{ absolutePostUrl }}",
+      "id": "{{ postUrl }}",
+      "url": "{{ postUrl }}",
       "title": "{{ post.data.title }}",
-      "content_html": {% if post.templateContent %}{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) | dump | safe }}{% else %}""{% endif %},
+      "content_html": {% if post.templateContent %}{{ post.templateContent | htmlToAbsoluteUrls(postUrl) | dump | safe }}{% else %}""{% endif %},
       "date_published": "{{ post.date | dateToRfc3339 }}"
     }
     {% if not loop.last %},{% endif %}
