--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -9,7 +9,7 @@
   <meta property="og:site_name" content="ɴɴBlog" />
   <meta property="og:title" content="{{ title }}" />
   <meta property="og:description" content="{{ description or metadata.description }}" />
-  <meta property="og:image" content="{{ image }}" />
+  <meta property="og:image" content="{{ image | openGraphResize }}" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="{{ page.url | url }}" />
   <meta property="og:locale" content="{# #TODO #}" />
