--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -14,5 +14,5 @@
     <a class="link-footer" href="{{ '/feed.rss'  | url }}">RSS </a>
     <a class="link-footer" href="{{ '/feed.json' | url }}">JSON</a>
   </div>
-  <p>Copyright &copy; 2022 - {{ collections.currentYear }}</p>
+  <p>Copyright &copy; 2022 - {{ build.date.getFullYear() }}</p>
 </footer>
