--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -4,7 +4,7 @@ layout: layouts/default.njk
 
 <header
   class="hero min-h-[20rem] relative"
-  style="background-image: url({{ image }});"
+  style="background-image: url({% img image, 240 %});"
 >
   <div class="hero-overlay bg-opacity-75 shadow-inner"></div>
   <div class="hero-content text-center">
